[wip]: Implement data seeding on first launch